ExternalAddess should not be used for calls and jumps inside CodeCache.
Also make sure referenced address has global name which is important for Leyden (needed for patching when AOT code is loaded). Or, if possible, move data into CodeCache as we do for some intrinsic's tables.
My collected statistics shows that most accesses external values are static strings (no dynamic strings). Consider using separate Relocation class for them.
Also make sure referenced address has global name which is important for Leyden (needed for patching when AOT code is loaded). Or, if possible, move data into CodeCache as we do for some intrinsic's tables.
My collected statistics shows that most accesses external values are static strings (no dynamic strings). Consider using separate Relocation class for them.
- relates to
-
JDK-8337702 Use new ForwardExceptionNode to call StubRoutines::forward_exception_entry()
-
- Resolved
-
-
JDK-8337797 Additional ExternalAddress cleanup
-
- Resolved
-
- links to
-
Commit(master) openjdk/jdk/34edc735
-
Review(master) openjdk/jdk/20412