8337396: Cleanup usage of ExternalAddess